--- a/src/style.scss
+++ b/src/style.scss
@@ -15,24 +15,24 @@ $logoColor: yellow;
 }
 .logo {
   flex: 1;
-  margin:5px
+  margin:20px
 }
-.logo-img{
+.logo__img{
     color: $logoColor;
 }
-.logo .nav-links {
+.logo .nav__links {
     display: flex;
 }
-.nav-links{
+.nav__links{
     display: flex;
     width: 20%;
     justify-content: flex-end;
     align-items: baseline;
 }
-.nav-links li {
+.nav__links li {
     list-style: none;
 }
-.nav-link{
+.nav__link{
     margin-right: 20%;
 }
 .cart {
@@ -58,7 +58,7 @@ $logoColor: yellow;
 
 #sort {
 }
-.sort-title {
+.sort__title {
   font-weight: 700;
   margin-right: 20px;
 }
@@ -75,7 +75,7 @@ $logoColor: yellow;
 width: 80%;
 margin-top: 7%;
 }
-.sort-links{
+.sort__links{
     display: flex;
     justify-content: space-between;
     width: 45%;
@@ -86,24 +86,24 @@ margin-top: 7%;
     display: flex;
     flex-wrap: wrap;
 }
-.product-container {
+.product__container {
     width: 270px;
     display: flex;
     flex-direction: column;
     padding: 1%;
 }
-.product-image-container {
+.product__image__container {
     width: 100%;
 }
-.product-name{
+.product__name{
     width: 100%;
     font-weight: 700;
 }
-.product-price{
+.product__price{
  text-decoration: line-through;
  flex-grow: 1;
 }
-.product-image{
+.product__image{
  width: 100%;
 }
 .addtocartbtn {
@@ -113,14 +113,14 @@ margin-top: 7%;
     background-color: yellow;
     font-weight: 600;
 }
-.sort-link{
+.sort__link{
     cursor: pointer;
 }
 
 .mobile-view{
 display:none
 }
-.cart-count{
+.cart__count{
         height: 15px;
         width: 18px;
         background-color: red;
@@ -133,11 +133,11 @@ display:none
         font-weight: 700;
         color: white;
 }
-.discount-price {
+.discount__price {
  font-weight: 800;
  flex-grow: 1;
 }
-.discount-percentage {
+.discount__percentage {
     font-weight: 800;
     color: #44c823;
     flex-grow: 1;
@@ -146,23 +146,23 @@ display:none
     display: flex;
     justify-content: space-between;
 }
-.cart-image-container {
+.cart__image__container {
     width: 200px;
     margin: 1%;
 }
-.cart-prices{
+.cart__prices{
     display: flex;
     justify-content: space-evenly;
     width: 80%;
     align-items: center;
 }
-.cart-details{
+.cart__details{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
 }
-.rest-details{
+.rest__details{
     display: flex;
     justify-content: space-between;
     width: 94%;
@@ -178,7 +178,7 @@ display:none
     align-items: baseline;
 }
 
-.cart-container{
+.cart__container{
     display: flex;
     padding: 0%;
     border: solid 1px;
@@ -186,7 +186,7 @@ display:none
     width: 100%;
     height: 220px
 }
-.quantity-control {
+.quantity__control {
     width: 220px;
 }
 .box{
@@ -194,7 +194,7 @@ display:none
     text-align: center;
     font-weight: 800;
 }
-.remove-div{
+.remove__div{
     font-weight: 700;
     cursor: pointer;
 }
@@ -214,39 +214,39 @@ display:none
     height: 200px;
     padding: 10px;
 }
-.total-header{
+.total__header{
     border-bottom: solid 2px lightgrey;
     height: 18%;
     text-align: center;
 
 }
-.total-body{
+.total__body{
     display: flex;
     justify-content: space-between;
     border-bottom: solid 2px lightgrey;
     height: 45%;
     align-items: center;
 }
-.price-text{
+.price__text{
     display: flex;
     flex-direction: column;
 }
-.total-prices{
+.total__prices{
   display: flex;
   flex-direction: column;
 }
-.total-price{
+.total__price{
     margin-bottom: 10px;
 }
-.discount-price{
+.discount__price{
     flex-grow: 1;
 }
-.total-footer{
+.total__footer{
     display: flex;
     justify-content: space-between;
     margin-top: 10%;
 }
-.net-amount-text, .net-amount{
+.net__amount__text, .net__amount{
     font-weight: 700;
 }
 #filterApplyBtn {
@@ -257,7 +257,7 @@ display:none
     border-radius: 25%;
     height: 40px;
 }
-.filter-title {
+.filter__title {
   font-weight: 700;
 }
 
@@ -317,7 +317,7 @@ display:none
   }
 
 @media screen and (max-width:1024px) {
-    .cart-count {
+    .cart__count {
         height: 15px;
         width: 18px;
         background-color: red;
@@ -334,6 +334,9 @@ display:none
  }
 #filter{
    display: none;
+}
+.filter__modal {
+    width:100%
 }
 #sort {
     display: none;
@@ -357,7 +360,7 @@ margin-top: 0%;
     font-weight: 600;
     padding: 2%
 }
-.product-container {
+.product__container {
     width: 47%;
     display: flex;
     flex-direction: column;
@@ -379,11 +382,11 @@ margin-top: 0%;
     font-size: small;
 }
 
-.modal-btn{
+.modal__btn{
     display: flex;
     justify-content: space-around;
 }
-.rest-details{
+.rest__details{
     display: flex;
     justify-content: space-between;
     width: 94%;
