--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 $headerColor: #0000ff;
 $logoColor: yellow;
+$buttonColor: #ffa638;
 @mixin border-box($val: border-box){
     -webkit-box-sizing: $val;
     -moz-box-sizing:    $val;
@@ -107,11 +108,13 @@ margin-top: 7%;
  width: 100%;
 }
 .product__addtocartbtn {
-    width: 101px;
-    border-radius: 20%;
+    width: 110px;
+    border-radius: 100px / 85px;
     margin-left: 10%;
-    background-color: yellow;
-    font-weight: 600;
+    background-color:$buttonColor;
+    font-weight: 700;
+    height: 38px;
+    border: none;
 }
 .sort__link{
     cursor: pointer;
