--- a/src/style.scss
+++ b/src/style.scss
@@ -360,9 +360,16 @@ display:none
         color: white;
         font-size: 65%;
       }
+      .div__slider {
+        height: 149px;
+        scroll-behavior: fixed;
+        position: fixed;
+        width: 278px;
+      }
  #main-body{
   display: flex;
   flex-direction: column;
+  margin-left: 6%;
  }
 #filter{
    display: none;
@@ -400,10 +407,10 @@ margin-top: 0%;
 }
 
 #filterModal{
-    width: 64%;
-    height: 62%;
+    width: 100%;
+    height: 100%;
     margin-top: 30%;
-    margin-left: 20%;
+    margin-left: 11%;
     font-size: small;
 }
 #sortModal{
